--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "waitForImages"]
 	path = waitForImages
 	url = https://github.com/alexanderdickson/waitForImages.git
+[submodule "fontfaceobserver"]
+	path = fontfaceobserver
+	url = https://github.com/bramstein/fontfaceobserver.git
